--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,16 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Intermediate outputs
+correct*/
+medmcqa*/
+usmle*/
+attack_logs/
+logs/
+
+# Resources
+external/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
